--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="lg:flex lg:space-x-8">
                 <div class="lg:w-2/3">
                     <div class="text-left mb-2">
-                        <span class="text-white font-semibold text-sm">Mushoku Tensei Jobless Reincarnation Season 1  </span>
+                        <span class="text-white font-semibold text-sm">Mushoku Tensei Jobless Reincarnation Season 1  </span>  <font color="#FF0000">Complete</font>
                     </div>
                     <section class="mb-6">
                         <div class="video-player-container rounded-lg shadow-lg">
